Adding Accounts db.

--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,9 @@ javafx {
     modules = [ 'javafx.controls' ]
 }
 
+dependencies {
+    implementation 'org.xerial:sqlite-jdbc:3.43.2.0'
+}
+
+
 mainClassName = 'HelloFX'
