--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ javafx {
 
 dependencies {
     implementation 'org.xerial:sqlite-jdbc:3.43.2.0'
+    implementation 'org.mindrot:jbcrypt:0.4'
 }
 
 
